CIV-6293 Adapt changes